--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"dotenv": "^8.2.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"node-fetch": "^2.6.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.4"
